updated Design doc steps

--- a/sherpaIngest.ipynb
+++ b/sherpaIngest.ipynb
@@ -101,12 +101,7 @@
     "\n",
     "### RAG step 1: Asking the document questions\n",
     "- extract text and provide context about the document sections and structure that will be used for the semantic search.\n",
-    "- embed the text and the questions using the `sentence_transformers` library.\n",
-    "### RAG step 2: Semantic search\n",
-    "- calculate the cosine similarity between the embedded questions and the embedded text.\n",
-    "- return the most relevant sections of the document that match the questions.\n",
-    "### RAG step 3: Summarization\n",
-    "- summarize the relevant sections using a generative model."
+    "- embed the text and the questions using the `sentence_transformers` library."
    ]
   },
   {
@@ -605,6 +600,16 @@
     "for section in doc.sections():\n",
     "    print(f\"Section: {section.title}\")\n",
     "    print(f\"Children: {[child.to_text() for child in section.children]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a55fdfc",
+   "metadata": {},
+   "source": [
+    "### RAG step 2: Semantic search\n",
+    "- calculate the cosine similarity between the embedded questions and the embedded text.\n",
+    "- return the most relevant sections of the document that match the questions.\n"
    ]
   },
   {
@@ -3446,6 +3451,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c88f2bc9",
+   "metadata": {},
+   "source": [
+    "As you can see, there are many options for the parser to control how to get structured data from the PDF including sectioning context in smart chunking, and the ability to include or exclude images, tables, and other elements. \n",
+    "\n",
+    "The next step requires us to choose a method best suited for the type of query we want to perform. For example, if we want to ask general questions about the document content, we can provide section titles and possibly child nodes to help guide the semantic search. If we want to ask specific questions about a sections paragraphs, we probably want to include the child nodes to get the most relevant text."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 59,
    "id": "e80cc0c6",
@@ -3642,13 +3657,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "333284cb",
+   "metadata": {},
+   "source": [
+    "### RAG step 3: Summarization\n",
+    "- summarize the relevant sections using a generative model.\n",
+    "\n",
+    "Example code using the `transformers` huggingface library to summarize the text is shown below. This will use a pre-trained model to generate a summary of the relevant sections of the document.\n",
+    "```python\n",
+    "from transformers import pipeline\n",
+    "# Load a summarization pipeline\n",
+    "summarizer = pipeline(\"summarization\", \n",
+    "                      model=\"facebook/bart-large-cnn\")\n",
+    "\n",
+    "def summarize_text(text: str) -> str:\n",
+    "    \"\"\"Summarize the input text using the summarization pipeline.\"\"\"\n",
+    "    # Adjust max_length and min_length as needed but dont exceed the attention limit of the model\n",
+    "    summary = summarizer(text, max_length=len(text)/2, min_length=30, do_sample=False) \n",
+    "    return summary[0]['summary_text'] if summary else \"No summary available.\"\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "        # input_text will be the chunk of text to summarize in the actual application\n",
+    "        input_text = '''The Contractor will be required to design, develop, or operate a system of records on individuals, to accomplish \n",
+    "                        an agency function subject to the Privacy Act of 1974, Public Law 93-579, December 31, 1974 (5 U.S.C. 552a) and \n",
+    "                        applicable agency regulations. Violation of the Act may involve the imposition of criminal penalties.'''\n",
+    "        summary = summarize_text(input_text)\n",
+    "        print(\"Summary:\")\n",
+    "        print(summary)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7295e5d2",
+   "metadata": {},
+   "source": [
+    "Example for how we can target an online api like the openai api to summarize the text is shown below. This will use the OpenAI API to generate a summary of the relevant sections of the document.\n",
+    "```python"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "2b027a90",
    "metadata": {},
    "outputs": [],
    "source": [
-    "llm = openai\n",
+    "openai.api_key = \"your-openai-api-key\"\n",
     "index = VectorStoreIndex([])\n",
     "for chunk in doc.chunks():\n",
     "    index.insert(Document(text=chunk.to_context_text()), extra_info={})\n",
