--- a/sherpaIngest.ipynb
+++ b/sherpaIngest.ipynb
@@ -99,9 +99,8 @@
    "source": [
     "The basic idea of the Retrieval step is to ask questions of the document. To do this we will use the `sentence_transformers` library to embed the questions and the document text, and then use cosine similarity to find the most relevant parts of the document that match the question. This is called \"semantic search\". As the name implies, it is a search for the meaning of the text rather than exact matches of words. The parser will return a `Document` object that contains the document and the parse data as a tree node structure. We will use the `Document` object to extract the text and embed it for semantic search. We need to:\n",
     "\n",
-    "### RAG step 1: Asking the document questions\n",
-    "- extract text and provide context about the document sections and structure that will be used for the semantic search.\n",
-    "- embed the text and the questions using the `sentence_transformers` library."
+    "### RAG step 1: Extracting text with context\n",
+    "- extract text and provide context about the document sections and structure that will be used for the semantic search.\n"
    ]
   },
   {
@@ -126,26 +125,6 @@
     "for section in doc.sections():\n",
     "    print(f\"Section: {section.title}\")\n",
     "    print(f\"Children: {[child.to_text() for child in section.children]}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2a55fdfc",
-   "metadata": {},
-   "source": [
-    "### RAG step 2: Semantic search\n",
-    "- calculate the cosine similarity between the embedded questions and the embedded text.\n",
-    "- return the most relevant sections of the document that match the questions.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "b086b308",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = SentenceTransformer('all-MiniLM-L6-v2')"
    ]
   },
   {
@@ -193,6 +172,27 @@
     "As you can see, there are many options for the parser to control how to get structured data from the PDF including sectioning context in smart chunking, and the ability to include or exclude images, tables, and other elements. \n",
     "\n",
     "The next step requires us to choose a method best suited for the type of query we want to perform. For example, if we want to ask general questions about the document content, we can provide section titles and possibly child nodes to help guide the semantic search. If we want to ask specific questions about a sections paragraphs, we probably want to include the child nodes to get the most relevant text."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a55fdfc",
+   "metadata": {},
+   "source": [
+    "### RAG step 2: Semantic search\n",
+    "- embed the text and the questions using the `sentence_transformers` library.\n",
+    "- calculate the cosine similarity between the embedded questions and the embedded text.\n",
+    "- return the most relevant sections of the document that match the questions.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "b086b308",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = SentenceTransformer('all-MiniLM-L6-v2')"
    ]
   },
   {
